--- a/css/style.css
+++ b/css/style.css
@@ -5,19 +5,20 @@
 }
 h1{
 	color:white;
-	font-size:38px;
+	font-size:48px;
 	font-family:bold 700;
 	text-align:center;
+	font-weight: bold;
 }
 .nav{
-	color:blue;
+	color:#0066FF;
 	font-size:18px;
 	font-family: sans-serif;
 	text-align:center;
 
 }
 .adbox{
-	background-color: blue;
+	background-color: #00FFFF;
 	padding:28px;
 }
 .kicker{
@@ -27,6 +28,9 @@ h1{
 h2{
 	font-size: 30px;
 	font-family: bold 700;
+	font-weight: bold;
+}
+
 }
 .byline{
 	color:grey;
@@ -42,9 +46,19 @@ h2{
 }
 h3{
 	padding-left: 18px;
-	font-size: 20px;
+	font-size: 40px;
 }
 
 h4{
 	padding-top: 4px;
+}
+.footer{
+	background-color: black;
+	padding:28px;
+
+}
+h5{
+	color:white;
+	font-size: 18px;
+	font-family: normal 400;
 }
